# tripwire

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-02T09-06-55-955Z.yml  page-2026-07-02T09-07-10-896Z.yml  page-2026-07-02T09-07-27-433Z.yml  page-2026-07-02T09-07-40-539Z.yml  page-2026-07-02T09-07-47-334Z.yml  page-2026-07-02T09-09-22-203Z.yml
hooks/: hooks.json
scripts/: bootstrap.sh  ensure-watcher.sh  report-status.sh
skills/tripwire/: SKILL.md
src/tripwire/: __init__.py  models.py  recorder.py  redaction.py  report.py
src/tripwire/cli/: cdp.py  launch.py  main.py  observer.js  state.py  watcher.py
src/tripwire/integrations/: browser_use.py  linear.py  playwright.py
tests/: test_browser_use_integration.py  test_cdp.py  test_cli.py  test_launch.py  test_linear.py  test_models.py  test_playwright_integration.py  test_recorder.py  test_redaction.py  test_report.py  test_state.py  test_watcher.py
