[tool.poetry]
name = "tripwire"
version = "0.1.0"
description = "Rich bug reports for AI browser agents — console, network, repro steps, environment."
authors = ["Sunny Wan <sunnywan2020@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TryNUA/tripwire"
packages = [{ include = "tripwire", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
websockets = { version = ">=13,<16", optional = true }

[tool.poetry.extras]
cli = ["websockets"]

[tool.poetry.scripts]
tripwire = "tripwire.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8"
pytest-asyncio = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
